# easyfasta

./: LICENSE  README.md  pyproject.toml
FastaUtils/: __init__.py  fastautils.py
easyfasta/: __init__.py  easyfata.py
