[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "FastaUtils"
dynamic = ["version"]
requires-python = ">= 3.8"


authors = [
  {name = "Romain JSB Lannes", email = "romain.lannes@protonmail.com"}
]
maintainers = [
  {name = "Romain JSB Lannes", email = "romain.lannes@protonmail.com"}
]

description = "A lightweight Python library for efficient FASTA file parsing and DNA sequence manipulation."
readme = "README.md"

license = "MIT"
keywords = ["bioinformatics", "fasta"]
classifiers = [ "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]



[project.urls]
Homepage = "https://github.com/rLannes/FastaUtils"
Repository = "https://github.com/rLannes/FastaUtils"
Documentation = "https://github.com/rLannes/FastaUtils"
