[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"
#requires = ["setuptools>=77.0.3", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "FastaUtils"
dynamic = ["version"]
requires-python = ">= 3.8"
authors = [
  {name = "Romain JSB Lannes", email = "romain.lannes@protonmail.com"}
]
maintainers = [
  {name = "Romain JSB Lannes", email = "romain.lannes@protonmail.com"}
]
description = "A lightweight Python library for efficient FASTA file parsing and DNA sequence manipulation."
readme = "README.md"
#license-files = ["LICENSE"]
#license-file = "LICENSE"

license = {text = "MIT"} 
keywords = ["bioinformatics", "fasta"]
classifiers = [ "Development Status :: 5 - Production/Stable",
"License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]


[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/rLannes/FastaUtils"
Repository = "https://github.com/rLannes/FastaUtils"
Documentation = "https://github.com/rLannes/FastaUtils"

#[tool.setuptools]
#license-file = []